Fixed search box and quick links banner overlapping problem in Firefox.
git-svn-id: https://ncisvn.nci.nih.gov/svn/ncim/trunk@41 b145b987-6716-48ef-8e4a-68a7679c2f12

--- a/software/ncimbrowser/web/css/styleSheet.css
+++ b/software/ncimbrowser/web/css/styleSheet.css
@@ -147,6 +147,7 @@ h3
 {
  float: left;
  width: 383px;
+ height: 130px;
 }
 
 .texttitle-blue 
@@ -227,7 +228,7 @@ h3
 .search-globalnav 
 {
  width: 357px;
- height: 82px;
+ height: 130px;
  background-color: #dde3ec;
  margin-left: 383px;
  border-color: red;
